Finish header and content

--- a/index.html
+++ b/index.html
@@ -8,41 +8,46 @@
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
 <body>
-    <div class="header">
-        <div class="leftheader">
-            Header Logo
+    <div class="top">
+        <div class="header">
+            <div class="leftheader">
+                Header Logo
+            </div>
+            <div class="rightheader">
+                <a href="https://www.theodinproject.com/">Odin project</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+            </div>
         </div>
-        <div class="rightheader">
-            <a href="https://www.theodinproject.com/">Odin project</a>
-            <a href="#">header link two</a>
-            <a href="#">header link three</a>
+        <div class="hero">
+            <div class="container">
+                <h1>This website is awesome!</h1>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <button class="signup-one">Sign up</button>
+            </div>
+            <img src="https://i.pinimg.com/736x/58/a7/77/58a777f5b57dc8ff9ddd5d6fca848aa1--facts-about-animals-animal-facts.jpg" alt="blue lobster">
         </div>
-    </div>
-
-    <div class="hero">
-        <div class="hero-main">This website is awesome!</div>
-        <div class="hero-secondary">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
-        <button class="signup-one">Sign up</button>
-        <img src="https://i.pinimg.com/736x/58/a7/77/58a777f5b57dc8ff9ddd5d6fca848aa1--facts-about-animals-animal-facts.jpg" alt="blue lobster">
     </div>
 
     <div class="content">
-        <div class="contenttitle">Cool stuff here</div>
-        <div class="container">
-            <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAADKCAMAAAC7SK2iAAAAA1BMVEVHSUiLE5txAAAASElEQVR4nO3BMQEAAADCoPVPbQ0PoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeDMYOAAEnHI17AAAAAElFTkSuQmCC" alt="">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.
-        </div>
-        <div class="container">
-            <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAADKCAMAAAC7SK2iAAAAA1BMVEVHSUiLE5txAAAASElEQVR4nO3BMQEAAADCoPVPbQ0PoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeDMYOAAEnHI17AAAAAElFTkSuQmCC" alt="">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.
-        </div>
-        <div class="container">
-            <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAADKCAMAAAC7SK2iAAAAA1BMVEVHSUiLE5txAAAASElEQVR4nO3BMQEAAADCoPVPbQ0PoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeDMYOAAEnHI17AAAAAElFTkSuQmCC" alt="">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.
-        </div>
-        <div class="container">
-            <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAADKCAMAAAC7SK2iAAAAA1BMVEVHSUiLE5txAAAASElEQVR4nO3BMQEAAADCoPVPbQ0PoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeDMYOAAEnHI17AAAAAElFTkSuQmCC" alt="">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam.
+        <h2>Some cool stuff here</h2>
+        <div class="content-box">
+            <div class="container">
+                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAADKCAMAAAC7SK2iAAAAA1BMVEVHSUiLE5txAAAASElEQVR4nO3BMQEAAADCoPVPbQ0PoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeDMYOAAEnHI17AAAAAElFTkSuQmCC" alt="">
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam. </p>
+            </div>
+            <div class="container">
+                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAADKCAMAAAC7SK2iAAAAA1BMVEVHSUiLE5txAAAASElEQVR4nO3BMQEAAADCoPVPbQ0PoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeDMYOAAEnHI17AAAAAElFTkSuQmCC" alt="">
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam. </p>
+            </div>
+            <div class="container">
+                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAADKCAMAAAC7SK2iAAAAA1BMVEVHSUiLE5txAAAASElEQVR4nO3BMQEAAADCoPVPbQ0PoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeDMYOAAEnHI17AAAAAElFTkSuQmCC" alt="">
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam. </p>
+            </div>
+            <div class="container">
+                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAADKCAMAAAC7SK2iAAAAA1BMVEVHSUiLE5txAAAASElEQVR4nO3BMQEAAADCoPVPbQ0PoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAeDMYOAAEnHI17AAAAAElFTkSuQmCC" alt="">
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam. </p>
+            </div>
         </div>
     </div>
 
@@ -52,7 +57,7 @@
 
     <div class="signup">
         <div class="signup-container">
-            <h4>Lorem ipsum</h4> 
+            <h3>Lorem ipsum</h3> 
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.
             <button class="signup-two">Sign up</button>
         </div>
