--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     </div>
 
     <div class="quote">
-        Above all things I hope the education of the common people will be attended to, convinced that on their good sense we may rely with the most security for the preservation of a due degree of liberty.  -Thomas Jefferson
+        <p> <em> Above all things I hope the education of the common people will be attended to, convinced that on their good sense we may rely with the most security for the preservation of a due degree of liberty.</em></p>
+        <p id="person">-Thomas Jefferson</p>
     </div>
 
     <div class="signup">
