Style signup and footer

--- a/index.html
+++ b/index.html
@@ -58,14 +58,16 @@
 
     <div class="signup">
         <div class="signup-container">
-            <h3>Lorem ipsum</h3> 
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.
+            <div>
+                <h3>Lorem ipsum</h3> 
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.</p>
+            </div>
             <button class="signup-two">Sign up</button>
         </div>
     </div>
 
     <div class="footer">
-        Copyright © Niklas Schmidt 2022
+        <p>Copyright © Niklas Schmidt 2022</p>
     </div>
 </body>
 </html>
